Building out test coverage.
Got a problem with the duration condition. But I have disabled that test
for now whilst I figure it out. Need to grab some sleep.

--- a/Palmer/Properties/Resources.resx
+++ b/Palmer/Properties/Resources.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ExceptionMessage" xml:space="preserve">
-    <value>Failed to execute function multiple times.</value>
+    <value>An error occured performing an operation. The operation we retried '{0}' times and failed, the last exception message was '{1}'. Check the inner exception for details.</value>
   </data>
 </root>
